--- a/CeeLearnAndDo/CeeLearnAndDo/CeeLearnAndDo.csproj
+++ b/CeeLearnAndDo/CeeLearnAndDo/CeeLearnAndDo.csproj
@@ -116,6 +116,7 @@
     <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Project.aspx" />
+    <Content Include="StyleSheet1.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
