--- a/CeeLearnAndDo/CeeLearnAndDo/CeeLearnAndDo.csproj
+++ b/CeeLearnAndDo/CeeLearnAndDo/CeeLearnAndDo.csproj
@@ -94,6 +94,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Contact.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="packages.config" />
     <Content Include="ApplicationInsights.config">
@@ -101,6 +102,7 @@
     </Content>
     <Content Include="Models\ClassDiagram.cd" />
     <Content Include="web.config" />
+    <Content Include="Site.Master" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
@@ -120,7 +122,6 @@
     <Content Include="App_Data\CeeLearnAndDoDB_log.ldf">
       <DependentUpon>CeeLearnAndDoDB.mdf</DependentUpon>
     </Content>
-    <Content Include="Contact.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Project.aspx" />
     <Content Include="Web1.config" />
@@ -151,6 +152,9 @@
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
+    <Compile Include="Default.aspx.designer.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -162,6 +166,13 @@
       <DependentUpon>Project.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Site.Master.cs">
+      <DependentUpon>Site.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Site.Master.designer.cs">
+      <DependentUpon>Site.Master</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="css\" />
