--- a/CeeLearnAndDo/CeeLearnAndDo/CeeLearnAndDo.csproj
+++ b/CeeLearnAndDo/CeeLearnAndDo/CeeLearnAndDo.csproj
@@ -94,6 +94,10 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\CeeLearnAndDo.mdf" />
+    <Content Include="App_Data\CeeLearnAndDo_log.ldf">
+      <DependentUpon>CeeLearnAndDo.mdf</DependentUpon>
+    </Content>
     <Content Include="Contact.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="packages.config" />
@@ -101,7 +105,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Models\ClassDiagram.cd" />
-    <Content Include="Project.aspx" />
     <Content Include="web.config" />
     <Content Include="Site.Master" />
     <None Include="web.Debug.config">
@@ -120,6 +123,7 @@
   <ItemGroup>
     <Content Include="Admin.aspx" />
     <Content Include="Global.asax" />
+    <Content Include="Project.aspx" />
     <Content Include="Web1.config" />
   </ItemGroup>
   <ItemGroup>
@@ -171,7 +175,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="css\" />
     <Folder Include="fonts\" />
     <Folder Include="images\" />
