--- a/CeeLearnAndDo/CeeLearnAndDo/CeeLearnAndDo.csproj
+++ b/CeeLearnAndDo/CeeLearnAndDo/CeeLearnAndDo.csproj
@@ -197,6 +197,7 @@
       <DependentUpon>TickerTape.aspx</DependentUpon>
     </Compile>
     <Compile Include="CeeLearnAndDoDB.cs" />
+    <Compile Include="Classes\AdminProjectProp.cs" />
     <Compile Include="Classes\FaQProp.cs" />
     <Compile Include="Classes\MailInfoProp.cs" />
     <Compile Include="Classes\ProjectProp.cs" />
