--- a/CeeLearnAndDo/CeeLearnAndDo/Web.config
+++ b/CeeLearnAndDo/CeeLearnAndDo/Web.config
@@ -3,12 +3,16 @@
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
+
 <configuration>
   <connectionStrings>
     <add name="ConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\CeeLearnAndDoDB.mdf;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+    <authentication mode="Forms">
+      <forms loginUrl="~/login.aspx"></forms>
+    </authentication>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
     <httpModules>
